--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -32,3 +32,6 @@ jobs:
 
       - name: Run Ruff Formatter (Check only)
         run: ruff format --check .
+
+      - name: Run Mypy
+        run: uv run mypy .
