--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -13,12 +13,17 @@ repos:
     # Ruff version specified indirectly by pyproject.toml usually,
     # but good to align or use a recent one here.
     # For now, let's use a recent rev.
-    rev: v0.4.4 # Or check for the latest matching your ruff install
+    rev: v0.4.9 # Aligned with recent stable ruff version
     hooks:
     -   id: ruff
         args: [--fix, --exit-non-zero-on-fix] # Apply fixes and exit if fixes were made
     -   id: ruff-format
         # args: [] # No specific args needed for format usually
+-   repo: https://github.com/pre-commit/mirrors-mypy
+    rev: v1.10.0 # Use a versão mais recente do mypy
+    hooks:
+    -   id: mypy
+        args: [--no-strict-optional, --ignore-missing-imports] # Ajuste conforme a necessidade do projeto
 ci:
     autofix_commit_msg: "style: auto-fixes from pre-commit hooks"
     autoupdate_commit_msg: "chore: pre-commit autoupdate"
