--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -2,9 +2,9 @@ name: Lint Codebase
 
 on:
   push:
-    branches: [ main ] # Or your default branch, e.g., master, develop
+    branches: [main] # Or your default branch, e.g., master, develop
   pull_request:
-    branches: [ main ] # Or your default branch
+    branches: [main] # Or your default branch
 
 jobs:
   lint:
@@ -16,7 +16,7 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
-          python-version: '3.12' # Should match project.requires-python
+          python-version: "3.12" # Should match project.requires-python
 
       - name: Install uv
         uses: astral-sh/setup-uv@v1 # Or specific version
